--- a/ai-medical-image-classifier/requirements.txt
+++ b/ai-medical-image-classifier/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.0
-tensorflow==2.15.0
-numpy==1.24.0
-opencv-python==4.8.0.74
-pillow==10.0.0
+tensorflow==2.20.0
+numpy>=1.24.0
+opencv-python>=4.8.0
+pillow>=10.0.0
 werkzeug==2.3.0
-scikit-learn==1.3.0
+scikit-learn>=1.3.0
